--- a/javascript/demo.html
+++ b/javascript/demo.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="../build/axolotl.js"></script>
+<script src="../build/olm.js"></script>
 <script>
 
 document.addEventListener("DOMContentLoaded", function (event) {
@@ -19,10 +19,10 @@ document.addEventListener("DOMContentLoaded", function (event) {
         return {start:start, done:done};
     }
 
-    var alice = new Axolotl.Account();
-    var bob = new Axolotl.Account();
-    var a_session = new Axolotl.Session();
-    var b_session = new Axolotl.Session();
+    var alice = new Olm.Account();
+    var bob = new Olm.Account();
+    var a_session = new Olm.Session();
+    var b_session = new Olm.Session();
     var message_1;
     var tasks = [];
 
