--- a/javascript/demo.html
+++ b/javascript/demo.html
@@ -29,10 +29,16 @@ document.addEventListener("DOMContentLoaded", function (event) {
     tasks.push(["alice", "Creating account", function() { alice.create() }]);
     tasks.push(["bob", "Creating account", function() { bob.create() }]);
     tasks.push(["alice", "Create outbound session", function() {
-        var bobs_keys_1 = JSON.parse(bob.identity_keys())[0];
+        var bobs_id_keys = JSON.parse(bob.identity_keys("bob", "bob_device", 0, 0));
+        var bobs_curve25519_key;
+        for (key in bobs_id_keys.keys) {
+            if (key.startsWith("curve25519:")) {
+                bobs_curve25519_key = bobs_id_keys.keys[key];
+            }
+        }
         var bobs_keys_2 = JSON.parse(bob.one_time_keys())[1];
         a_session.create_outbound(
-            alice, bobs_keys_1[1], bobs_keys_2[0], bobs_keys_2[1]
+            alice, bobs_curve25519_key, bobs_keys_2[0], bobs_keys_2[1]
         );
     }]);
     tasks.push(["alice", "Encrypt first message", function() {
