--- a/javascript/demo.html
+++ b/javascript/demo.html
@@ -1,8 +1,7 @@
 <html>
 <head>
-<script src="../build/olm.js"></script>
+<script src="olm.js"></script>
 <script>
-
 document.addEventListener("DOMContentLoaded", function (event) {
     function progress(who, message) {
         var message_element = document.createElement("pre");
