--- a/javascript/demo/one_to_one_demo.html
+++ b/javascript/demo/one_to_one_demo.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="olm.js"></script>
+<script src="../olm.js"></script>
 <script>
 document.addEventListener("DOMContentLoaded", function (event) {
     function progress(who, message) {
